// Format:
// Date (mm/dd/yr)
// rNumber [Author]
// 	* Modifications.
// 	- Details.
//========================================

02/02/2010
	r175 [pakpil]
	* Fixed RK_RUNEMASTERY that was crashing map_server at level lowdest than 10 while crafting.
	* Fixed SC_AUTOSHADOWSPELL that shouldn't spell physical skills. Bug report 131.

02/01/2010
	r174 [Rytech]
	*Filled in the missing spot for the Guillotine Cross exclusive headgear.
	-It appears to be Phantom Menace that gets the %10 increase. Thanks Executor.

02/01/2010
	r173 [Rytech]
	*Added completed set of exclusive 3rd job headgears.
	-Note: I need the name of the skill that damage is boosted for the Guillotine Cross.
	-Note 2: I didnt see any bonus to increase just ranged damage, so I just added a % increase.
	-No worry since jobs like Minstreal and Wanderer will use only bow, instruments, and wips.
	-ID 5759 exists in the client, but the item has not been released. So its disabled for now.

02/01/2010
	r172 [pakpil]
	* Added recoded SC_FEINTBOMB.

01/31/2010
	r170 [pakpil]
	* Fixed WA_SWING_DANCE, WA_SYMPHONY_OF_LOVER, WA_MOONLIT_SERENADE, MI_RUSH_WINDMILL, MI_ECHOSONG, MI_HARMONIZE that are not stackable.
	* Fixed WA_SYPMPHONY_OF_LOVER that affect Mdef instead Mdef2.
	* Fexed WA_SWINGDANCE that have a different value to ASPD and SPEED.
	* Added new packet that show exp you gain/lost in  the official server.

01/31/2010
	r168 [Jobbie]
	* Minor fix on eAthena merge. follow up r167
	* Minor fix on Reverberation which calculation to damage not added in battle.c
	* Reverberation, Metallic Sound and Severe Rainstorm should take weapons element.

01/30/2010
	r167 [Jobbie]
	* Merge eAthena Updates upto r14328(excluding those stable updates).

	r166 [pakpil]
	* Fixed max_lv and aura_lv in battle_confing that was caussing problems with 3rd jobs auras. Bug report 99.
	* Added WA_SWING_DANCE, WA_SYMPHONY_OF_LOVER, WA_MOONLIT_SERENADE, MI_RUSH_WINDMILL, MI_ECHOSONG, MI_HARMONIZE and WM_METALICSOUND skills.