@@ -952,7 +952,7 @@
 2301,9,6,2,0,0x1,0,3,1,no,0,0,0,misc,0,		SC_CHAOSPANIC,Chaos Panic
 2302,7,6,2,0,0x3,5,3,1,yes,0,0,0,misc,0,		SC_MAELSTROM,Maelstrom
 2303,9,6,2,0,0x1,0,3,1,no,0,0,0,misc,0,		SC_BLOODYLUST,Bloody Lust
-2304,0,6,4,0,0x1,4,3,1,yes,0,0,0,weapon,1,		SC_FEINTBOMB,Feint Bomb
+2304,0,6,4,0,0x3,4,3,1,yes,0,0,0,weapon,0,		SC_FEINTBOMB,Feint Bomb
 
 // Royal Guard
 2307,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		LG_CANNONSPEAR,Cannon Spear
